# blvm-commons

./: .cargo-audit-ignore.sh  .gitignore  .insta.yml  BLLVM_COMMONS_COMPLETION_PLAN.md  BUILD_SYSTEM_CONSISTENCY_ANALYSIS.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  DIRECTORY_STRUCTURE.md  IMPORTANT_PLACEHOLDERS_AND_TODOS.md  INTEGRATION_IMPLEMENTATION_PLAN.md  INTEGRATION_ISSUES.md  INTEGRATION_SUMMARY.md  INTEGRATION_VALIDATION.md  Makefile  NEXT_PRIORITIES.md  PHASE2_COMPLETE.md  PRE_RELEASE_CLEANUP.md  PROOF_OF_WORK_TESTING.md  PROVE_IT_WORKS.md  README.md  SECURITY.md  SECURITY_CONTROLS_IMPLEMENTATION.md  SYSTEM_OVERVIEW.md  SYSTEM_REVIEW_CONTINUED.md  SYSTEM_STATUS.md  TESTING_STRATEGY.md  check_and_push_all.sh  config.example.toml  generate_og_images.py  versions.toml
.github/workflows/: ci.yml  fuzz.yml  governance-app-ci.yml  nostr-announce.yml  test-coverage.yml
archive/deprecated-docs/: ADDITIONAL_VERIFICATION_OPPORTUNITIES_VALIDATION.md  FORMAL_VERIFICATION_99_PERCENT_ACHIEVED.md  FORMAL_VERIFICATION_COMPREHENSIVE_SUMMARY.md  KANI_VERIFICATION_OPTIMIZATION.md
benchmark-results/: BTCDECODED_BENCHMARKS.md  BUILD_BITCOIN_CORE.md  FINAL_COMPARISON_REPORT.md  PRODUCTION_FEATURES_COMPARISON.md  PRODUCTION_FEATURES_FINAL.md  PRODUCTION_FEATURES_RESULTS.md  README.md  SUMMARY.md  benchmark_summary.json  bitcoin_core.json  bitcoin_core_test.json  full_comparison.json  production_features_comparison.json
benchmark-results/btdcoded_20251104_020319/: consensus_proof.json
bllvm-commons/: Cargo.toml
bllvm-commons/docs/: TECHNICAL_DEBT.md
bllvm-commons/src/: lib.rs  main.rs
bllvm-commons/tests/: README.md  e2e_test.rs  governance_e2e_integration_test.rs  governance_fork_test.rs  governance_integration_test.rs  integration_test.rs  nostr_tests.rs  property_tests.rs
config/: app.toml  production.toml
deployment/testnet/: README.md  config.toml  docker-compose.yml
docs/: ADDITIONAL_CONFIGURATION_OPTIONS.md  ADDITIONAL_VERIFICATION_OPPORTUNITIES.md  API_REFERENCE.md  BIP119_CTV_IMPLEMENTATION_PLAN.md  BIP119_CTV_MAINNET_SUITABILITY.md  BIP119_CTV_SECURITY_AND_PERFORMANCE.md  BIP152_COMPACT_BLOCKS.md  BIP330_ERLAY.md  BIP_FUTURE_ENHANCEMENTS_ANALYSIS.md  BITCOIN_COMMONS_MAINNET_SUITABILITY.md  BLLVM_OPTIMIZATIONS_PHASE4.md  BOOK_COMPLIANCE_GAP_ANALYSIS.md  BOOK_COMPLIANCE_GLARING_INCONSISTENCIES.md  BOOK_COMPLIANCE_IMPLEMENTATION.md  CHAINSTATE_VERIFICATION_VALIDATION.md  COMMONS_NETWORK_COMPATIBILITY.md  COMPARISON_BITCOIN_CORE.md  COMPREHENSIVE_VERIFICATION_SUMMARY.md  CONFIGURATION.md  CONFIG_INTEGRATION.md  CROSS_LAYER_VALIDATION.md  CRYPTOGRAPHIC_VERIFICATION_VALIDATION.md  DANDELION_K_ANONYMITY_SPEC.md  DEVELOPMENT.md  ECONOMIC_NODE_CLI.md  ENGINEERING_EDGE_CASES.md  ERROR_HANDLING_IMPROVEMENTS.md  ERROR_HANDLING_PROGRESS.md  FORMAL_VERIFICATION_COVERAGE.md  FORMAL_VERIFICATION_MILESTONE_60_PROOFS.md  FORMAL_VERIFICATION_SESSION_4_SUMMARY.md  FORMAL_VERIFICATION_SESSION_5_SUMMARY.md  FORMAL_VERIFICATION_SESSION_6_SUMMARY.md  FORMAL_VERIFICATION_SESSION_7_SUMMARY.md  FORMAL_VERIFICATION_SESSION_8_SUMMARY.md  FORMAL_VERIFICATION_SESSION_9_SUMMARY.md  FUZZING_AND_BENCHMARKING.md  FUZZING_AND_BENCHMARK_RESULTS.md  GETTING_STARTED.md  GOVERNANCE_FORK_GUIDE.md  (+51 more)
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_REQUIREMENTS.md  README.md
docs/production/: BACKUP_RECOVERY.md  DEPLOYMENT_GUIDE.md  INCIDENT_RESPONSE.md  KEY_CEREMONY.md  MAINTENANCE_GUIDE.md  MONITORING_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  SECURITY_GUIDE.md
docs/security/: CRITICAL_SECURITY_CONTROLS.md
docs/testing/: COMPREHENSIVE_GAP_ANALYSIS.md  FINAL_COVERAGE_REPORT.md  README.md  REMAINING_COVERAGE_GAPS.md  REMAINING_HIGH_PRIORITY_GAPS.md  RUST_TESTING_SUITE_EXPANSION.md  TESTING_IMPLEMENTATION_SUMMARY.md  (+5 more)
fuzz/: Cargo.toml
migrations/: 004_economic_nodes.sql  007_tier_overrides.sql  008_signature_reasoning.sql  008_voting_keys.sql  009_build_state_tracking.sql  011_node_registry.sql  012_governance_registries.sql  013_governance_review_tracking.sql  014_github_issue_tracking.sql  015_additional_indexes.sql
migrations-postgres/: 001_initial_schema.sql  002_build_state_tracking.sql  007_tier_overrides.sql
scripts/: BENCHMARK_IMPROVEMENTS.md  README.md  README_BENCHMARKING.md  benchmark_bitcoin_core.py  benchmark_comparison.sh  blocking_workflow_monitor.sh  check_workflows.sh  compare_benchmarks.py  download_workflow_logs.sh  export_benchmarks.py  generate-test-keys.sh  key-backup-restore.sh  key-ceremony.sh  migrate_sqlite_to_postgres.sh  monitor_workflows.sh  setup-production.sh  setup-testnet.sh  test_cross_layer_sync.sh  testnet-test-suite.sh  verify-integration.sh  verify-server.sh  view_results.py
src/: config.rs  error.rs  lib.rs  main.rs
tests/: README.md  e2e_test.rs  economic_nodes_test.rs  fee_forwarding_tx_hash_tests.rs  github_integration_test.rs  governance_fork_test.rs  governance_integration_test.rs  governance_review_tests.rs  governance_tests.rs  integration_test.rs  nostr_payment_hash_tests.rs  property_tests.rs  simple_test.rs  snapshot_tests.rs  test_runner.rs
(+781 files in other folders)
